# AVSS

./: .gitignore  Demo_AVSS.ipynb  README.md  calc_metrics.py  inference.py  pyproject.toml  requirements.txt  train.py
inference_dataset/mouths/: 00000125526.npz
scripts/: download_data.py  download_data.sh  download_inference_data.py  download_inference_data.sh  inference.sh  train.sh
src/configs/: baseline.yaml  inference.yaml  onebatch_test.yaml  rtfs_bigger.yaml  rtfs_improved.yaml
src/configs/dataloader/: improved.yaml  onebatch.yaml
src/configs/datasets/: custom_dir.yaml  dataset.yaml  dataset_onebatchtest.yaml  example_onebatchtest.yaml  test_inference.yaml  val_inference.yaml
src/configs/loss/: sisnr.yaml
src/configs/model/: convtasnet.yaml  rtfsnet.yaml
src/configs/transforms/: audio_separation.yaml
src/configs/writer/: cometml.yaml
src/datasets/: __init__.py  base_dataset.py  collate.py  custom_dir_dataset.py  data_utils.py  dataset.py  example.py
src/logger/: cometml.py  wandb.py
src/loss/: __init__.py  sisnr.py
src/metrics/: __init__.py  pesq.py  sdri.py  sisnri.py  stoi.py
src/model/: __init__.py  baseline_model.py  convtasnet.py  rtfsnet.py  video_encoder.py  video_encoder_lrw.py
src/trainer/: base_trainer.py  inferencer.py  trainer.py
src/transforms/: audio_augment.py  normalize.py
src/utils/: init_utils.py
