[project]
name = "avss"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "black>=25.9.0",
    "comet-ml>=3.54.0",
    "einops>=0.8.1",
    "gdown>=5.2.0",
    "hydra-core>=1.3.2",
    "isort>=7.0.0",
    "matplotlib>=3.10.7",
    "numpy==1.26.4",
    "pandas>=2.3.3",
    "pesq>=0.0.4",
    "pre-commit>=4.3.0",
    "pystoi>=0.4.1",
    "requests>=2.32.5",
    "ruff>=0.14.4",
    "soundfile>=0.13.1",
    "torch==2.2.0",
    "torchaudio==2.2.0",
    "torchmetrics>=1.8.2",
    "torchvision==0.17.0",
    "tqdm>=4.67.1",
    "wandb>=0.22.3",
]
